--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>About | Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,9 +23,82 @@
 </head>
 
 <body>
+  <header>
+    <div class="content-wrapper">
+      <a href="../index.html"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="../faq/index.html">FAQ</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <main>
+
+    <section class="mission">
+      <div class="content-wrapper">
+        <div class="mission-content">
+          <h1>Our Mission - we want to make you the team you always wanted to be.</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.<br>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="map">
+      <figure>
+    </section>
+
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h1>Contact us, because you all need this.</h1>
+        <address>
+          <div class="info">
+            <h4>General Information</h4>
+            <p>333 Main St, Lake Geneva, WI 53147<br>
+            555-555-5555<br>
+            hello@unplugged.com</p>
+          </div>
+          <div class="facilitator">
+            <h4>Chat with a Facilitator</h4>
+            <p>555-555-5556<br>
+            facilitator@unplugged.com</p>
+          </div>
+        </address>
+      </div>
+    </section>
+
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <h4>Contact</h4>
+          <address>
+            555-555-5555<br>
+            hello@unplugged.com
+          </address>
+        </div>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p><a href="https://www.facebook.com" target="_blank">Facebook</a></p>
+            <p><a href="https://www.twitter.com" target="_blank">Twitter</a></p>
+            <p><a href="https://www.instagram.com" target="_blank">Instagram</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>Copyright 2020 | Unplugged</p>
+    </div>
+  </footer>
+
+  
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
