--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>FAQ | Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,9 +23,45 @@
 </head>
 
 <body>
+  <header>
+    <div class="content-wrapper">
+      <a href="../index.html"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="../about/index.html">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <h4>Contact</h4>
+          <address>
+            555-555-5555<br>
+            hello@unplugged.com
+          </address>
+        </div>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p><a href="https://www.facebook.com" target="_blank">Facebook</a></p>
+            <p><a href="https://www.twitter.com" target="_blank">Twitter</a></p>
+            <p><a href="https://www.instagram.com" target="_blank">Instagram</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>Copyright 2020 | Unplugged</p>
+    </div>
+  </footer>
+
+ 
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
