--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Unplugged</title>
+  <title>Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -29,18 +29,21 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
+          <li><a href="faq/index.html">FAQ</a></li>
+          <li><a href="about/index.html">About</a></li>
         </ul>
       </nav>
     </div>
   </header>
+
   <main>
+
     <section class="hero-area">
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
       </div>
     </section>
+
     <aside>
       <div class="content-wrapper">
         <div class="form-description">
@@ -54,35 +57,39 @@
         </div>
       </div>
     </aside>
+
     <section class="features">
       <div class="content-wrapper">
         <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
-        <article class="features-items">
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-        </article>
-        <article class="features-items">
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-        </article>
-        <article class="features-items">
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
-        </article>
-        <article class="features-items">
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
-        </article>
-        <article class="features-items">
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-        </article>
-        <article class="features-items">
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
-        </article>
+        <div class="features-items">
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+          </article>
+        </div>
       </div>
     </section>
+    
     <section class="reviews">
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like these.</h2>
@@ -91,23 +98,24 @@
           <div>
             <h3>LaCrue Bottling Co. October 2019</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        </div>
+          </div>
         </article>
       </div>
     </section>
   </main>
+
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
         <div class="contact">
-          <h3>Contact</h3>
+          <h4>Contact</h4>
           <address>
-            <p>555-555-5555</p>
-            <p>hello@unplugged.com</p>
+            555-555-5555<br>
+            hello@unplugged.com
           </address>
         </div>
         <div class="social">
-          <h3>Social</h3>
+          <h4>Social</h4>
           <div class="social-icons">
             <p><a href="https://www.facebook.com" target="_blank">Facebook</a></p>
             <p><a href="https://www.twitter.com" target="_blank">Twitter</a></p>
@@ -120,6 +128,7 @@
       <p>Copyright 2020 | Unplugged</p>
     </div>
   </footer>
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
