--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
           </p>
         </div>
       </div>
@@ -59,7 +59,7 @@
 
     <section class="contact-section">
       <div class="content-wrapper">
-        <h1>Contact us, because you all need this.</h1>
+        <h2>Contact us, because you all need this.</h2>
         <address class="contact-content">
           <div>
             <h4>General Information</h4>
