added input styles, background-color, and other styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-  
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 
@@ -51,7 +51,9 @@
       <div class="content-wrapper">
         <div class="form-description">
           <h3>Want to join the next retreat?</h3>
-          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+          <p>
+            Find out when we are holding our next retreat and how your company or team can sign up!
+          </p>
         </div>
         <div class="form">
           <h3>Find out more</h3>
@@ -99,7 +101,7 @@
         <article>
           <div class="reviews-image"></div>
           <div class="reviews-text">
-            <h3>LaCrue Bottling Co. October 2019</h3>
+            <h3>LaCrue Bottling Co.<br>October 2019</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
           </div>
         </article>
