--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+      <figure>
+        <a href="#">
+          <img src="img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -99,7 +103,9 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like these.</h2>
         <article>
-          <div class="reviews-image"></div>
+          <figure>
+            <img src="img/unplugged-retreat-lacrue.jpg" alt="Group of happy people at an outdoor retreat.">
+          </figure>
           <div class="reviews-text">
             <h3>LaCrue Bottling Co.<br>October 2019</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
