--- a/about/index.html
+++ b/about/index.html
@@ -57,6 +57,7 @@
 
     <section class="map">
       <figure>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2569.4794376738123!2d-88.43615099728191!3d42.57757048117406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88058bacd30982a9%3A0x76fb3812b764025f!2s1024%20S%20Lake%20Shore%20Dr%2C%20Lake%20Geneva%2C%20WI%2053147%2C%20USA!5e0!3m2!1sen!2sca!4v1609197442166!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </figure>
     </section>
 
