--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="form">
           <h3>Find out more</h3>
-          <input type="text" name="name" placeholder="Email">
+          <input type="text" name="name" placeholder="name@email.com">
           <input type="button" value="Download Itinerary">
         </div>
       </div>
